Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -822,9 +822,9 @@
     "def distance_between_neighbors(selected_trip, neighbor_trip):\n",
     "    distance_btw=distance_location(selected_trip, neighbor_trip)\n",
     "    return list(map(lambda trip:{'distance_from_selected':distance_btw,\n",
-    "                                 'pickup_latitude':neighbor_trip['pickup_latitude'],\n",
-    "                                'pickup_longitude':neighbor_trip['pikcup_longitude'],\n",
-    "                                'trip_distance':neighbor_trip['trip_distance']},distance_btw))"
+    "                                 'pickup_latitude':trip['pickup_latitude'],\n",
+    "                                'pickup_longitude':trip['pikcup_longitude'],\n",
+    "                                'trip_distance':trip['trip_distance']},dis))"
    ]
   },
   {
