Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -883,7 +883,7 @@
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
-    "    without_selected=list(filter(lambda neighbor: distance_between_neighbors()))"
+    "    without_selected=list(filter(lambda neighbor: distance_between_neighbors(selected_individual, neighbor)!=0,))"
    ]
   },
   {
