--- a/index.ipynb
+++ b/index.ipynb
@@ -929,28 +929,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
     "def nearest_neighbors(selected_trip, trips, number = 3):\n",
     "    answer=distance_all(selected_trip, trips)\n",
-    "    print (answer[:number])\n",
+    "    sort=\n",
     "        #return list(map(lambda trip: distance_all(selected_trip, trip),trips))\n",
     "    #print (len(range(number))-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'trip_distance': 1.3, 'pickup_latitude': 40.766931, 'pickup_longitude': -73.982098, 'distance_from_selected': 0.23505256047318146}, {'trip_distance': 4.5, 'pickup_latitude': 40.77773, 'pickup_longitude': -73.951902, 'distance_from_selected': 0.2162779533470808}, {'trip_distance': 2.4, 'pickup_latitude': 40.795678, 'pickup_longitude': -73.971049, 'distance_from_selected': 0.24242215976473674}]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[{'trip_distance': 1.3,\n",
+       "  'pickup_latitude': 40.766931,\n",
+       "  'pickup_longitude': -73.982098,\n",
+       "  'distance_from_selected': 0.23505256047318146},\n",
+       " {'trip_distance': 4.5,\n",
+       "  'pickup_latitude': 40.77773,\n",
+       "  'pickup_longitude': -73.951902,\n",
+       "  'distance_from_selected': 0.2162779533470808},\n",
+       " {'trip_distance': 2.4,\n",
+       "  'pickup_latitude': 40.795678,\n",
+       "  'pickup_longitude': -73.971049,\n",
+       "  'distance_from_selected': 0.24242215976473674}]"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
